11/29/11 basics: move "Bar Chart" control above "Pie Chart" control
11/29/11 basics: Reset All button should be orange in all tabs
11/29/11 common: change wording of "Bring back the PhET skater" to "Return Skater"
11/29/11 common: remove italic font from energy legend
# 2.08.03 (56847) Sep 22, 2011
Energy Skate Park Basics: Initialize the skater beneath the track so the user has to move it to start the sim
# 2.08.02 (56801) Sep 21, 2011
Energy Skate Park Basics: Fixed reset all for track friction value
Energy Skate Park Basics: Fixed reset all for track friction on/off
Energy Skate Park Basics: Fixed reset all for stick to track on/off
Fixed reset all for pie chart
Fixed reset all for track selection
Basics: Moved tracks to the right since they were going offscreen
# 2.08.01 (56115) Sep 2, 2011
Improved friction and stickiness controls
Added bar graphs
Removed keyboard-driven rocket thrusters
Moved the legend out from behind the control panel
Fixed sky graphics
Moved the house to the right and the mountains to the left
Added buttons to switch track
Added control panel in intro tab
Moved help to Energy Skate Park
Started new energy-skate-park-basics flavor
Made fields final, removed unused classes
Reformatted and optimized imports
# 2.08.00 (53070) Jun 12, 2011
6/12/11 > added new translation credits features
# 2.07.01 (52603) Jun 2, 2011
4/27/2011 switched Microsoft Clip Art Images for 'bugboard.gif', 'bulldog.png', 'rocket5.png', 'ruler-thumb.png'
Moved spline computations from phetcommon to common/spline since it depends on Jama
Moved spline computations from energy-skate-park to phetcommon for reuse in fluid-pressure-and-flow
Optimize imports, see #2071
# 2.07.00 (38314) Jan 28, 2010
1/28/10 redeployed to production server.
# 2.06.03 (38266) Jan 26, 2010
1/26/10 > Removed the "Bounciness" and "Stickiness" controls for the skater, see 2129.
# 2.06.02 (38254) Jan 25, 2010
1/25/10 Got rid of some warnings that were being printed to the console.